--- a/package.json
+++ b/package.json
@@ -9,18 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.6"
+    "@radix-ui/react-dialog": "1.1.1",
+    "@radix-ui/react-scroll-area": "1.1.0",
+    "@radix-ui/react-select": "2.1.1",
+    "@radix-ui/react-slot": "1.1.0",
+    "@radix-ui/react-tabs": "1.1.0",
+    "@radix-ui/react-tooltip": "1.1.2",
+    "autoprefixer": "10.4.20",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.1",
+    "framer-motion": "11.3.30",
+    "lucide-react": "0.436.0",
+    "next": "14.2.7",
+    "react": "18.3.1",
+    "react-countup": "6.5.3",
+    "react-dom": "18.3.1",
+    "react-icons": "5.3.0",
+    "react-tooltip": "5.28.0",
+    "swiper": "11.1.12",
+    "tailwind-merge": "2.5.2",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.6"
+    "eslint-config-next": "14.2.7",
+    "postcss": "^8",
+    "postcss-apply": "0.12.0",
+    "tailwindcss": "3.4.10",
+    "typescript": "^5"
   }
 }
