--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "1.1.14",
+    "@radix-ui/react-scroll-area": "1.2.9",
+    "@radix-ui/react-select": "2.2.5",
+    "@radix-ui/react-tabs": "1.1.12",
+    "@radix-ui/react-tooltip": "1.2.7",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "framer-motion": "12.23.6",
@@ -20,6 +24,7 @@
     "react-countup": "6.5.3",
     "react-dom": "19.1.0",
     "react-icons": "5.5.0",
+    "swiper": "11.2.10",
     "tailwind-merge": "3.3.1",
     "tailwindcss-animate": "1.0.7"
   },
