--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-countup": "6.5.3",
     "react-dom": "19.1.0",
     "react-icons": "5.5.0",
+    "react-type-animation": "3.2.0",
     "swiper": "11.2.10",
     "tailwind-merge": "3.3.1",
     "tailwindcss-animate": "1.0.7"
