--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "19.1.0",
     "react-countup": "6.5.3",
     "react-dom": "19.1.0",
+    "react-hook-form": "7.60.0",
     "react-icons": "5.5.0",
     "react-native-vector-icons": "10.2.0",
     "react-type-animation": "3.2.0",
