--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "4.4.1",
+    "@emailjs/nodejs": "5.0.2",
     "@radix-ui/react-dialog": "1.1.14",
     "@radix-ui/react-scroll-area": "1.2.9",
     "@radix-ui/react-select": "2.2.5",
