--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@radix-ui/react-select": "2.2.5",
     "@radix-ui/react-tabs": "1.1.12",
     "@radix-ui/react-tooltip": "1.2.7",
+    "@upstash/ratelimit": "2.0.6",
+    "@upstash/redis": "1.35.1",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "framer-motion": "12.23.6",
@@ -31,7 +33,8 @@
     "react-type-animation": "3.2.0",
     "swiper": "11.2.10",
     "tailwind-merge": "3.3.1",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "zod": "4.0.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
