--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "framer-motion": "12.23.6",
+    "lru-cache": "11.1.0",
     "lucide-react": "0.525.0",
     "next": "15.4.2",
     "postcss": "8.5.6",
