--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "7.60.0",
     "react-icons": "5.5.0",
+    "react-intersection-observer": "9.16.0",
     "react-native-vector-icons": "10.2.0",
     "react-type-animation": "3.2.0",
     "swiper": "11.2.10",
