--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emailjs/browser": "4.4.1",
     "@emailjs/nodejs": "5.0.2",
+    "@fortawesome/fontawesome-free": "7.1.0",
+    "@fortawesome/react-fontawesome": "github:fortawesome/react-fontawesome",
     "@radix-ui/react-dialog": "1.1.14",
     "@radix-ui/react-scroll-area": "1.2.9",
     "@radix-ui/react-select": "2.2.5",
@@ -20,6 +22,7 @@
     "@upstash/redis": "1.35.1",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "fortawesome": "0.0.1-security",
     "framer-motion": "12.23.6",
     "lru-cache": "11.1.0",
     "lucide-react": "0.525.0",
@@ -40,13 +43,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "4.1.11",
+    "@tailwindcss/postcss": "4.1.18",
     "@types/node": "20.19.9",
     "@types/react": "19.2.8",
     "@types/react-dom": "19.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
-    "tailwindcss": "4.1.11",
+    "tailwindcss": "4.1.18",
     "typescript": "^5"
   },
   "overrides": {
